[workspace]
resolver = "2"
members = [
  "crates/luciuz-core",
  "crates/luciuz-config",
  "crates/luciuz-telemetry",
  "crates/luciuz-proxy",
  "crates/luciuz-tls",
  "crates/luciuz-policy",
  "crates/luciuz-wasm",
  "crates/luciuz-control",
  "bin/luciuz",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.90"
